--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/common": "^3.1",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
@@ -33,7 +34,9 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/maker-bundle": "^1.31",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/phpunit-bridge": "^5.3",
+        "symfony/profiler-pack": "^1.0",
+        "zenstruck/foundry": "^1.11"
     },
     "config": {
         "preferred-install": {
