--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "knplabs/knp-markdown-bundle": "^1.9",
         "knplabs/knp-time-bundle": "^1.16",
         "nyholm/psr7": "^1.4",
+        "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.5",
         "sentry/sentry-symfony": "^4.1",
         "symfony/asset": "5.0.*",
